@@ -140,6 +140,11 @@
             <param name="rename.function" value="zen_href_link" />
             <param name="rename.suffix" value="_DISABLED" />
         </antcall>
+        <antcall target="rename-function">
+            <param name="rename.file" value="${release.full.dir}/admin/includes/functions/html_output.php" />
+            <param name="rename.function" value="zen_href_link" />
+            <param name="rename.suffix" value="_DISABLED" />
+        </antcall>
 
         <!-- patch email funcs -->
         <antcall target="rename-function">
